--- a/css/styles.less
+++ b/css/styles.less
@@ -80,3 +80,19 @@ body{
 		}
 	}
 }
+
+#footer_line{
+	text-align: center;
+	font-size: 20px;
+}
+
+#signature:after{
+	content: "Created by siddhesh gore";
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	opacity: 0.3;
+	padding: 5px;
+	font-size: large;
+
+}
