--- a/css/styles.less
+++ b/css/styles.less
@@ -3,18 +3,39 @@ body{
 	font-family: 'Droid Sans', sans-serif;
 }
 
+.logo{
+	height: 80px;
+	#logo_img{
+		width:170px;
+		height:70px;
+	}
+}
+
+#sidebar{
+	height: 70px;
+}
+
+
+#right_bar{
+	padding:20px 15px;
+	vertical-align: middle;
+	text-align: center;
+	height: 70px;
+}
+
+
 #about_us #member{
-	#img_div{
+	#mem_div{
 		text-align: center;
-		
+		padding: 15px;
 		#member_img{
 			width: 100%;
 			height: 100%;
-			box-shadow: 0px 0px 10px 2px;
+			padding: 10px;
 			img{
+				box-shadow: 0px 0px 10px 2px;
 				width: inherit;
-				height: inherit;
-				padding: 5px;
+				height:inherit;
 			}
 		}
 		
@@ -25,6 +46,7 @@ body{
 		}
 		
 		#member_name{
+			padding-top: 10px;
 			font-size: x-large;
 			font-weight: 600;
 			text-align: center;
@@ -83,11 +105,12 @@ body{
 
 #footer_line{
 	text-align: center;
-	font-size: 20px;
+	font-size: 14px;
+	margin-bottom: 0px; 
 }
 
-#signature:after{
-	content: "Created by siddhesh gore";
+body:after{
+	content: "Created by Ganesh gore";
 	position: fixed;
 	bottom: 0;
 	right: 0;
