--- a/css/styles.less
+++ b/css/styles.less
@@ -11,6 +11,17 @@ body{
 	}
 }
 
+
+.main-sidebar{
+	margin-top: 40px;
+}
+
+.content-header h1{
+	clear:both;
+	margin-top: 20px;
+}
+
+
 #sidebar{
 	height: 70px;
 }
@@ -110,7 +121,7 @@ body{
 }
 
 body:after{
-	content: "Created by Ganesh gore";
+	content: "Created by Ganesh Gore";
 	position: fixed;
 	bottom: 0;
 	right: 0;
