--- a/css/styles.less
+++ b/css/styles.less
@@ -35,6 +35,48 @@ body{
 }
 
 
+
+#analytics {
+	#college{
+		border-right: dashed;
+	}
+	
+	#rank_label_field{
+		font-weight: 600;
+		font-size: 1em;
+	}
+	#rank_field{
+		text-align: center;
+		font-weight: 700;
+		font-size: 1.5em;
+		color:green;	
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #about_us #member{
 	#mem_div{
 		text-align: center;
